more docks, working scanning that shows result in console for now

--- a/PortSniffer/PortSniffer.csproj
+++ b/PortSniffer/PortSniffer.csproj
@@ -29,4 +29,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="View\ScanResults\" />
+  </ItemGroup>
+
 </Project>
